--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
         <p><a href="db2-hash-routines.pdf">db2-hash-routines.pdf</a></p>
 
         <p><a href="mod_authnz_ibmdb2.pdf">mod_authnz_ibmdb2.pdf</a></p>
+
+        <p><a href="mod_authnz_ibmdb2.pdf">mod_auth_ibmdb2.pdf (obsolete)</a></p>
       </section>
     </div>
 
-    
+
   </body>
 </html>
