--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <p><a href="mod_authnz_ibmdb2.pdf">mod_authnz_ibmdb2.pdf</a></p>
 
-        <p><a href="mod_authnz_ibmdb2.pdf">mod_auth_ibmdb2.pdf (obsolete)</a></p>
+        <p><a href="mod_auth_ibmdb2.pdf">mod_auth_ibmdb2.pdf (obsolete)</a></p>
       </section>
     </div>
 
