move pdf files in directory

--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@
     <div class="container">
       <section id="main_content">
         <p></p><p></p>
-        <p><a href="db2-hash-routines.pdf">db2-hash-routines.pdf</a></p>
+        <p><a href="./pdf/db2-hash-routines.pdf">db2-hash-routines.pdf</a></p>
 
-        <p><a href="mod_authnz_ibmdb2.pdf">mod_authnz_ibmdb2.pdf</a></p>
+        <p><a href="./pdf/mod_authnz_ibmdb2.pdf">mod_authnz_ibmdb2.pdf</a></p>
 
-        <p><a href="mod_auth_ibmdb2.pdf">mod_auth_ibmdb2.pdf (obsolete)</a></p>
+        <p><a href="./pdf/mod_auth_ibmdb2.pdf">mod_auth_ibmdb2.pdf (obsolete)</a></p>
       </section>
     </div>
-
 
   </body>
 </html>
